<resources>
    <string name="app_name">Calculator</string>
    <string name="history">0</string>
    <string name="actual_operation">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="button_c">C</string>
    <string name="button_plus_minus">+/-</string>
    <string name="button_percent">%</string>
    <string name="button_division">÷</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="x">X</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="button_minus">-</string>
    <string name="button_plus">+</string>
    <string name="_0">0</string>
    <string name="button_point">.</string>
    <string name="button_equally">=</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="night_mode">Night Mode</string>
</resources>