<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    >

    <LinearLayout
        android:id="@+id/first_button_panel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/second_button_panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_weight="1">

        <Button
            android:id="@+id/button_c"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_margin="@dimen/border_size"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button_c"
            android:background="#000" />

        <Button
            android:id="@+id/button_plus_minus"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_margin="@dimen/border_size"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button_plus_minus"
            android:background="#000" />

        <Button
            android:id="@+id/button_percent"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_margin="@dimen/border_size"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button_percent"
            android:background="#000" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_division"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_margin="@dimen/border_size"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:background="@color/orange"
            android:text="@string/button_division" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/second_button_panel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/third_button_panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/first_button_panel"
        app:layout_constraintVertical_weight="1">

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/button_7"
            android:layout_width="0dp"
            android:layout_margin="@dimen/border_size"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_7"
            android:background="#000"/>

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/button_8"
            android:layout_width="0dp"
            android:layout_margin="@dimen/border_size"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_8"
            android:background="#000"/>

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/button_9"
            android:layout_width="0dp"
            android:layout_margin="@dimen/border_size"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_9"
            android:background="#000"/>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/button_X"
            android:layout_width="0dp"
            android:layout_margin="@dimen/border_size"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/x"
            android:textColor="@color/black"
            android:background="@color/orange"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/third_button_panel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/fourth_button_panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/second_button_panel"
        app:layout_constraintTop_toBottomOf="@id/second_button_panel"
        app:layout_constraintVertical_weight="1">

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/button_4"
            android:layout_width="0dp"
            android:layout_margin="@dimen/border_size"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_4"
            android:background="#000"/>

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/button_5"
            android:layout_width="0dp"
            android:layout_margin="@dimen/border_size"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_5"
            android:background="#000"/>

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/button_6"
            android:layout_width="0dp"
            android:layout_margin="@dimen/border_size"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_6"
            android:background="#000"
            />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/button_minus"
            android:layout_width="0dp"
            android:layout_margin="@dimen/border_size"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button_minus"
            android:textColor="@color/black"
            android:background="@color/orange"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fourth_button_panel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/fifth_button_panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/third_button_panel"
        app:layout_constraintTop_toBottomOf="@id/third_button_panel"
        app:layout_constraintVertical_weight="1">

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/button_1"
            android:layout_width="0dp"
            android:layout_margin="@dimen/border_size"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_1"
            android:background="#000"/>

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/button_2"
            android:layout_width="0dp"
            android:layout_margin="@dimen/border_size"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_2"
            android:background="#000"/>

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/button_3"
            android:layout_width="0dp"
            android:layout_margin="@dimen/border_size"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_3"
            android:background="#000"/>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/button_plus"
            android:layout_width="0dp"
            android:layout_margin="@dimen/border_size"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button_plus"
            android:textColor="@color/black"
            android:background="@color/orange"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fifth_button_panel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/fourth_button_panel"
        app:layout_constraintTop_toBottomOf="@id/fourth_button_panel"
        app:layout_constraintVertical_weight="1">

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/button_0"
            android:layout_margin="@dimen/border_size"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.015"
            android:text="@string/_0"
            android:background="#000"/>

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/button_point"
            android:layout_width="0dp"
            android:layout_margin="@dimen/border_size"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button_point"
            android:background="#000"/>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/button_equally"
            android:layout_width="0dp"
            android:layout_margin="@dimen/border_size"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/button_equally"
            android:textColor="@color/black"
            android:background="@color/orange"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>